cabal-version: 2.0
name: obelisk-oauth-common
version: 0.1.0.0
synopsis: OAuth helpers for Obelisk apps
description: OAuth helpers for Obelisk apps
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
copyright: 2019 Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: Web
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules: Obelisk.OAuth.Route
                 , Obelisk.OAuth.State
                 , Obelisk.OAuth.State.Internal
                 , Obelisk.OAuth.Request
                 , Obelisk.OAuth.Config
                 , Obelisk.OAuth.Error
  other-extensions:
    DeriveGeneric,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    KindSignatures,
    LambdaCase,
    MultiParamTypeClasses,
    OverloadedStrings,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell,
    TypeApplications,
    UndecidableInstances
  build-depends:
    base >=4,
    categories,
    containers >=0.5,
    mtl >=2,
    obelisk-route,
    text >= 1.2,
    -- TODO: No support for ghcjs yet!
    entropy >= 0.4.1.4,
    base16-bytestring >= 0.1.1.6,
    aeson >= 1.3.1.1,
    obelisk-executable-config

  default-language: Haskell2010
  ghc-options: -Wall
