cabal-version: 2.0
name: obelisk-oauth-common
version: 0.2.0.0
synopsis: OAuth helpers for Obelisk apps
description: OAuth helpers for Obelisk apps
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
copyright: 2019 Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
category: Web
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules: Obelisk.OAuth.Authorization
  other-extensions:
    DeriveGeneric,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    KindSignatures,
    LambdaCase,
    MultiParamTypeClasses,
    OverloadedStrings,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TemplateHaskell,
    TypeApplications,
    UndecidableInstances
  build-depends:
    base >=4,
    categories,
    containers >=0.5,
    mtl >=2,
    network-uri >=2.6.3.0,
    obelisk-route,
    text >= 1.2
  default-language: Haskell2010
  ghc-options: -Wall
